--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,11 @@ obj/
 *.app
 *.o
 *.a
-doc/doc/
-doc/*.aux
-doc/*.log
-doc/*.out
-doc/*.gz
-doc/*.toc
-doc/*.nav
-doc/*.snm
-doc/*.pdf
+documentacao/doc/
+*.aux
+*.log
+*.out
+*.gz
+*.toc
+*.nav
+*.snm
