--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install doxygen
+      run: sudo apt install -y doxygen
+
     - name: Install LaTeX
       run: sudo apt install -y texlive-latex-extra latexmk #texlive-science  curl
 
