--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install doxygen
-      run: sudo apt install -y doxygen
+      run: sudo apt install -y graphviz doxygen
 
     - name: Install LaTeX
       run: sudo apt install -y texlive-latex-extra texlive-lang-portuguese latexmk #texlive-science  curl
